# slack-ros-pkg

slack_ros/: CMakeLists.txt  package.xml
slack_ros/scripts/: slack_ros.py  slack_ros_bridge.py  slack_service.py  slack_test.py
