<?xml version="1.0"?>
<package format="2">
  <name>slack_ros</name>
  <version>0.0.0</version>
  <description>The slack_ros package</description>

  <maintainer email="jbot@todo.todo">jbot</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-slackclient-pip</exec_depend>

</package>
